--- a/Final-Project/Error.html
+++ b/Final-Project/Error.html
@@ -6,6 +6,8 @@
     </head>
     <body style="background-color: red;">
         <h1>ERROR</h1>
-        <p>Resource not available, please try again.</p>
+        <p>Resource not available</p>
+        <p>The data you have entered does not exist in the ensembl<p>
+        <p>Try again!</p>
     </body>
 </html>
