--- a/Final-Project/basic index.html
+++ b/Final-Project/basic index.html
@@ -1,50 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>FINAL PRACTICE</title>
-  </head>
-  <body style="background-color: powderblue;">
-  <FONT FACE="impact" SIZE = 6 COLOR = 'white'><em><h2>*PEN final practice*</h2></em></FONT>
-
-
-  <FONT FACE="monospace" SIZE = 5 COLOR = 'darkslategray'><h4><br>---------------FORM NUMBER 1----------------<br></h4></FONT>
-    <form action="/listSpecies" method="get">
-      This form gives the user the information about all species <br> <input type="submit" value="Click to get all species">
-      <br><br>
-    </form>
-
-
-  <FONT FACE="monospace" SIZE = 5 COLOR = 'darkslategray'><h4><br>---------------FORM NUMBER 2----------------<br></h4></FONT>
-    <form action="/listSpecies" method="get">
-      This form allows the user to look information of a limited specie <br>
-      Number of species you want to know:
-      <input type="text" size="4" name="limit"><br>
-      <input type="submit" value="Click to search a limited specie"
-      <br><br>
-    </form>
-
-
-  <FONT FACE="monospace" SIZE = 5 COLOR = 'darkslategray'><h4><br>---------------FORM NUMBER 3----------------<br></h4></FONT>
-     <form action="/karyotype" method="get">
-      This form allows the user to look information of a concrete specie <br>
-      Name of the specie:
-      <input type="text" size="8" name="specie"><br>
-      <input type="submit" value="Click to search a concrete specie"
-      <br><br>
-    </form>
-
-  <FONT FACE="monospace" SIZE = 5 COLOR = 'darkslategray'><h4><br>---------------FORM NUMBER 4----------------<br></h4></FONT>
-     <form action="/chromosomeLength" method="get">
-      This form allows the user to know the length of the chromosome of the chosen specie <br>
-      Name of the specie: <br>
-         Choose a specie:
-      <input type="text" size="8" name="specie"><br>
-         Choose a chromo:
-      <input type="text" size="3" name="chromo"><br>
-      <input type="submit" value="Click to search the chromosome lenght"
-      <br><br>
-    </form>
-
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>FINAL PROJECT</title>
+    </head>
+    <body style="background-color: Lavender;">
+        <!-- <form face="cambria" size = 4 color = "black"> -->
+        <h1>Browsing Human and Vertebrates genome</h1>
+        <h2>BASIC Level Services</h2>
+        <hr>
+        <p>1)List of species in the genome database</p>
+        <form action="/listSpecies" method="get">
+            </p>Limit: <input type="text" size="2" name="limit"></p>
+            <!-- Click here to show Json:
+             #<input type="checkbox" name="json" value="1"><br> -->
+            <input type="submit" value="Send">
+        </form>
+    </body>
 </html>
