--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -32,31 +32,31 @@
             <p><button type="submit">Send</button></p>
         </form>
 
-        <!--<p>4.This form will provide the information about the Gene Sequence.</p>
+        <p>4)Sequence of a given human gene</p>
         <form action="/geneSeq" method="get">
             <p>Introduce the name of a gene: <input type="text" name="gene"></p>
             <p><button type="submit">Send</button></p>
         </form>
 
 
-        <p>5.This form will provide more information about the Gene Sequence.</p>
+        <p>5)Information about a human gene</p>
         <form action="/geneInfo" method="get">
             <p>Introduce the name of a gene: <input type="text" name="gene"></p>
             <p><button type="submit">Send</button></p>
         </form>
 
-        <p>6.This form will provide calculations about the Gene Sequence.</p>
+        <p>6)Calculations on the given human gene</p>
         <form action="/geneCalc" method="get">
             <p>Introduce the name of a gene: <input type="text" name="gene"></p>
             <p><button type="submit">Send</button></p>
         </form>
 
-        <p>7.This form will provide the name, end and start about the Gene Sequence.</p>
+        <p>7)Names of the genes located in the chromosome from the start to end positions</p>
         <form action="/geneList" method="get">
             <p>Introduce the name of a chromosome: <input type="text" name="chromo"></p>
-            <p>Introduce the start point: <input type="number" name="start" min="0"></p>
-            <p>Introduce the end point: <input type="number" name="end" min="0"></p>
+            <p>Introduce the start position: <input type="number" name="start" min="0"></p>
+            <p>Introduce the end position: <input type="number" name="end" min="0"></p>
             <p><button type="submit">Send</button></p>
-        </form> -->
+        </form>
     </body>
 </html>
