--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -8,47 +8,43 @@
         <font face="cambria" size = 4 color = "black">
 
           <h1>Browsing Human and Vertebrates genome</h1>
-          <h2>BASIC Level Services</h2>
-
+          <h2>BASIC Level Services</h2><br>
 
         <p>1)List of species in the genome database</p>
         <form action="/listSpecies" method="get">
             </p>Limit: <input type="number" name="limit" min="1" max="267"></p>
-            <p><button type="submit">Send</button></p>
+            <p><button type="submit">Send</button></p><br>
         </form>
-
 
         <p>2)Information about the karyotype:</p>
         <form action="/karyotype" method="get">
             </p>Select the species: <input type="text" name="specie"></p>
-            <p><button type="submit">Send</button></p>
+            <p><button type="submit">Send</button></p><br>
         </form>
-
 
          <p>3)Chromosome Length</p>
         <form action="/chromosomeLength" method="get">
             </p>Select the species: <input type="text" name="specie"></p>
             </p>Select a chromosome: <input type="text" name="chromo"></p>
-            <p><button type="submit">Send</button></p>
+            <p><button type="submit">Send</button></p><br>
         </form>
 
         <p>4)Sequence of a given human gene</p>
         <form action="/geneSeq" method="get">
             <p>Introduce the name of a gene: <input type="text" name="gene"></p>
-            <p><button type="submit">Send</button></p>
+            <p><button type="submit">Send</button></p><br>
         </form>
-
 
         <p>5)Information about a human gene</p>
         <form action="/geneInfo" method="get">
             <p>Introduce the name of a gene: <input type="text" name="gene"></p>
-            <p><button type="submit">Send</button></p>
+            <p><button type="submit">Send</button></p><br>
         </form>
 
         <p>6)Calculations on the given human gene</p>
         <form action="/geneCalc" method="get">
             <p>Introduce the name of a gene: <input type="text" name="gene"></p>
-            <p><button type="submit">Send</button></p>
+            <p><button type="submit">Send</button></p><br>
         </form>
 
         <p>7)Names of the genes located in the chromosome from the start to end positions</p>
@@ -56,7 +52,7 @@
             <p>Introduce the name of a chromosome: <input type="text" name="chromo"></p>
             <p>Introduce the start position: <input type="number" name="start" min="0"></p>
             <p>Introduce the end position: <input type="number" name="end" min="0"></p>
-            <p><button type="submit">Send</button></p>
+            <p><button type="submit">Send</button></p><br>
         </form>
     </body>
 </html>
