--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -49,7 +49,7 @@
 
         <p>7)Names of the genes located in the chromosome from the start to end positions</p>
         <form action="/geneList" method="get">
-            <p>Introduce the name of a chromosome: <input type="text" name="chromo"></p>
+            <p>Introduce the number of a chromosome: <input type="text" name="chromo"></p>
             <p>Introduce the start position: <input type="number" name="start" min="0"></p>
             <p>Introduce the end position: <input type="number" name="end" min="0"></p>
             <p><button type="submit">Send</button></p><br>
